--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Ignore everything
 *
 
-# Except the python_learning folder
-!MyBasicPythonProject/python_learning/
+# Except the Projects folder inside python_learning
+!MyBasicPythonProject/python_learning/Projects/
